Bug 1929491 - try another state machine if any error happens during the engine initialization phase. r=media-playback-reviewers,aosmond, a=dmeehan

If an error occurs during media engine initialization, we should attempt
to use another state machine for playback. However, if the key system
is already set, it indicates that playback can only be initiated via the
media engine. In this case, we should propagate the error and refrain
from trying another state machine.

Differential Revision: https://phabricator.services.mozilla.com/D228107